# my_universities

./: README.md  pyproject.toml
machine_learning/: linear_regression.ipynb
numerical_methods/: brachistochrone.ipynb  lagrange_interpolation.ipynb
